err/ztc.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/ztc'...
Listing './lib/python3.5/site-packages/ztc/apache'...
Compiling './lib/python3.5/site-packages/ztc/apache/__init__.py'...
***   File "./lib/python3.5/site-packages/ztc/apache/__init__.py", line 248
    print "average time: ", tl.avg_request_time
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ztc/check.py'...
***   File "./lib/python3.5/site-packages/ztc/check.py", line 140
    print "ZTC version %s" % self.ver
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ztc/hw'...
Compiling './lib/python3.5/site-packages/ztc/hw/__init__.py'...
***   File "./lib/python3.5/site-packages/ztc/hw/__init__.py", line 40
    print tw.get_status()
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ztc/hw/cpu.py'...
***   File "./lib/python3.5/site-packages/ztc/hw/cpu.py", line 38
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ztc/java'...
Listing './lib/python3.5/site-packages/ztc/ldap'...
Compiling './lib/python3.5/site-packages/ztc/ldap/__init__.py'...
***   File "./lib/python3.5/site-packages/ztc/ldap/__init__.py", line 46
    print c.ping()
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ztc/lib'...
Compiling './lib/python3.5/site-packages/ztc/lib/flup_fcgi_client.py'...
***   File "./lib/python3.5/site-packages/ztc/lib/flup_fcgi_client.py", line 142
    s = struct.pack('!L', nameLength | 0x80000000L)
                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ztc/mongo'...
Listing './lib/python3.5/site-packages/ztc/mysql'...
Compiling './lib/python3.5/site-packages/ztc/mysql/__init__.py'...
***   File "./lib/python3.5/site-packages/ztc/mysql/__init__.py", line 122
    print m.query("SELECT 1")
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ztc/net'...
Compiling './lib/python3.5/site-packages/ztc/net/__init__.py'...
***   File "./lib/python3.5/site-packages/ztc/net/__init__.py", line 81
    print c.all
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ztc/net/http'...
Listing './lib/python3.5/site-packages/ztc/net/icmp'...
Listing './lib/python3.5/site-packages/ztc/nginx'...
Compiling './lib/python3.5/site-packages/ztc/nginx/__init__.py'...
***   File "./lib/python3.5/site-packages/ztc/nginx/__init__.py", line 159
    print "ping:", st.ping
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ztc/pgsql'...
Compiling './lib/python3.5/site-packages/ztc/pgsql/pg_controldata.py'...
***   File "./lib/python3.5/site-packages/ztc/pgsql/pg_controldata.py", line 55
    print pc.get_last_checkpoint_age()
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ztc/pgsql/pgconn.py'...
***   File "./lib/python3.5/site-packages/ztc/pgsql/pgconn.py", line 33
    except  Exception, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ztc/php'...
Compiling './lib/python3.5/site-packages/ztc/store.py'...
***   File "./lib/python3.5/site-packages/ztc/store.py", line 68
    print "set - get test:"
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ztc/system'...
Compiling './lib/python3.5/site-packages/ztc/system/ntp.py'...
***   File "./lib/python3.5/site-packages/ztc/system/ntp.py", line 36
    if metric <> 'jitter':
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ztc/system/vfs'...
Listing './lib/python3.5/site-packages/ztc/vm'...
Compiling './lib/python3.5/site-packages/ztc/vm/memory.py'...
***   File "./lib/python3.5/site-packages/ztc/vm/memory.py", line 39
    print "Used: ", m.used
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
